5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1582_1331.log
== TEST (2019-03-12 17:29:50) 
-- CODE:
print(round(3//50))
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:29:53) 
-- CODE:
print(round(3/50))
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:11) 
-- CODE:
print(3/50)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:19) 
-- CODE:
print(3/50//%)
-- ERROR:
File "XXXX", line 1
    print(3/50//%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:29) 
-- CODE:
print(3/50%)
-- ERROR:
File "XXXX", line 1
    print(3/50%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:33) 
-- CODE:
print(3//50%)
-- ERROR:
File "XXXX", line 1
    print(3//50%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:35) 
-- CODE:
print(3/50%)
-- ERROR:
File "XXXX", line 1
    print(3/50%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:26) 
-- CODE:
print(3%50)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:38) 
-- CODE:
print(9%4)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:53) 
-- CODE:
print(3/50%3)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:31:55) 
-- CODE:
print(3/50%3)
-- EXECUTION TIME:
0.12732
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:31:57) 
-- CODE:
print(3/50%3)
-- EXECUTION TIME:
0.2015
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:58) 
-- CODE:
print(3/50%3)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:15) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:18) 
-- CODE:
print(3/50%1)
-- EXECUTION TIME:
0.167868
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:19) 
-- CODE:
print(3/50%1)
-- EXECUTION TIME:
0.148808
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:19) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:54) 
-- CODE:
print(3//50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:56) 
-- CODE:
print(3//50%1)
-- EXECUTION TIME:
0.173251
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:57) 
-- CODE:
print(3//50%1)
-- EXECUTION TIME:
0.207138
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:57) 
-- CODE:
print(3//50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:25) 
-- CODE:
print(3//50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:26) 
-- CODE:
print(3//50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:34) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:36) 
-- CODE:
print(3/50%1)
-- EXECUTION TIME:
0.245219
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:58) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:59) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:01) 
-- CODE:
print(3/50%1)
-- EXECUTION TIME:
0.255267
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:02) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:31) 
-- CODE:
print(3/50%1)
-- EXECUTION TIME:
0.158736
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:31) 
-- CODE:
print(3/50%1)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:20) 
-- CODE:
print(round(3/50%1))

-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:35:22) 
-- CODE:
print(round(3/50%1))

-- EXECUTION TIME:
0.19835
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:22) 
-- CODE:
print(round(3/50%1))

-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:35:23) 
-- CODE:
print(round(3/50%1))

-- EXECUTION TIME:
0.145563
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:41) 
-- CODE:
print(3/50)

-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:54) 
-- CODE:
print(50/3)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:04) 
-- CODE:
print(50/3%1)

-- OUTPUT:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:05) 
-- CODE:
print(50/3%1)

-- EXECUTION TIME:
0.215549
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:06) 
-- CODE:
print(50/3%1)

-- EXECUTION TIME:
0.184286
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:06) 
-- CODE:
print(50/3%1)

-- OUTPUT:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:14) 
-- CODE:
print(50/3)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:33) 
-- CODE:
print(50/3)
print(2)

-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:35) 
-- CODE:
print(50/3)
print(2)

-- EXECUTION TIME:
0.164789
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:36) 
-- CODE:
print(50/3)
print(2)

-- EXECUTION TIME:
0.135578
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:37) 
-- CODE:
print(50/3)
print(2)

-- EXECUTION TIME:
0.143949
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:38) 
-- CODE:
print(50/3)
print(2)

-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:52) 
-- CODE:
print(50//3)
print(2)

-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:01) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.149504
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:47:47) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.146364
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:29:15) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.218278
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:59:49) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.215907
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:56:28) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.156822
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:07:52) 
-- CODE:
print(50//3)
print(2)

-- EXECUTION TIME:
0.154041
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
